--- a/.github/workflows/migration.yml
+++ b/.github/workflows/migration.yml
@@ -72,6 +72,11 @@ jobs:
           curl -L https://github.com/golang-migrate/migrate/releases/download/${MIGRATE_VERSION}/migrate.linux-amd64.tar.gz | tar xvz
           sudo mv migrate /usr/local/bin/
           migrate -version
+      - name: Connect to Tailscale
+        uses: tailscale/github-action@v4
+        with:
+          authkey: ${{ secrets.TS_AUTHKEY }}
+          args: --accept-routes
 
       - name: Run migration
         shell: bash
